# race-carma

./: .clang-format  Makefile.am  Makefile.in  RACE_CARMA_GUIDE.adoc  README.adoc  aclocal.m4  autogen  build.sh  configure  configure.ac  rebase-instructions.md  sst.bash
.github/workflows/: ci.yml
build-aux/: ARTIFACTORY_REVISION.sh  INPUT_FILTER.sh.in  RACE_VERSION.sh  RIB_VERSION  RIB_VERSION.sh  autogen.ac  autogen.am  doxygen.am  gatbps-gen-version.docker.sh.args  gatbps-gen-version.docker.sh.cache  gatbps-gen-version.sh.args  gatbps-gen-version.sh.cache  sst_ajh_asciidoctor_document_html_recipe.sh
build-aux/downloads/: Apache-2.0.txt.ag.json  cmake-3.28.3.tar.gz.ag.json  cmake.tar.gz.ag.json  curl-8.6.0.tar.gz.ag.json  curl.tar.gz.ag.json  gmp-6.3.0.tar.gz.ag.json  gmp.tar.gz.ag.json  jquery-3.7.1.min.js.ag.json  jquery-ui-1.13.0-base.css.ag.json  jquery-ui-1.13.0.min.js.ag.json  jquery-ui-base.css.ag.json  jquery-ui.min.js.ag.json  jquery.min.js.ag.json  nlohmann-json-3.11.3.hpp.ag.json  nlohmann-json.hpp.ag.json  ntl-11.5.1.tar.gz.ag.json  ntl.tar.gz.ag.json  openssl-3.2.1.tar.gz.ag.json  openssl.tar.gz.ag.json  rabbitmq-c-0.13.0.tar.gz.ag.json  rabbitmq-c.tar.gz.ag.json  sqlite-autoconf-3450100.tar.gz.ag.json  sqlite-autoconf.tar.gz.ag.json  sst.tar.gz.ag.json
build-aux/gitbundles/: carma.ag.json  libsodium.ag.json
doc/: carma.am
doc/manual/: attributes.adoc  build.phony.ag  cro_dynamic_only.adoc  custom_config_options_for_race.adoc  index.adoc  index.html.children  index.html.children_nodist  jquery-ui-base.css.ag  jquery-ui.js.ag  jquery.js.ag  release_notes_for_race.adoc  release_notes_for_race_2021_05_07_r160.adoc  release_notes_for_race_2021_05_09_r190.adoc  release_notes_for_race_2021_05_10_r199.adoc  release_notes_for_race_2021_05_14_r216.adoc  release_notes_for_race_2021_05_17_r230.adoc  release_notes_for_race_2021_06_17_r4.adoc  release_notes_for_race_2021_07_05_r93.adoc  release_notes_for_race_2021_07_09_r150.adoc  release_notes_for_race_2021_07_12_r199.adoc  release_notes_for_race_2021_07_21_r210.adoc  release_notes_for_race_2021_07_22_r213.adoc  release_notes_for_race_2021_07_22_r215.adoc  release_notes_for_race_2021_08_17_r41.adoc  release_notes_for_race_2021_08_17_r56.adoc  release_notes_for_race_2021_09_21_r32.adoc  release_notes_for_race_2021_09_29_r255.adoc  release_notes_for_race_2021_09_29_r257.adoc  release_notes_for_race_2021_10_20_r263.adoc  release_notes_for_race_2021_12_02_r42.adoc  release_notes_for_race_2022_02_14_r20.adoc  release_notes_for_race_header_1.adoc  release_notes_for_race_header_2.adoc  release_notes_for_race_header_3.adoc  sst-asciidoctor.adoc  sst-asciidoctor.js  using_carma_with_race.adoc
doc/manual/attributes/: cl_standard_c_entities.adoc
doc/manual/partials/: choose_your_own_function_name.adoc  cro_server_count.adoc  race_cpp_api_correspondence.adoc
doc/manual/sections/: create_plugin_ta2.adoc  destroy_plugin_ta2.adoc  implementing_a_ta2_plugin_using_the_c_api.adoc  kestrel_ta2_plugin.adoc
doc/pages/: Gemfile  _config.yml  build.phony.ag  index.md  manual.am  style.scss
doc/pages/_includes/: artifact_links_fragment.md  common.liquid  config.liquid.in  documentation.md  main.md  section_files.liquid  source_code.md
doc/pages/_layouts/: root.html
doc/readme/: archive_entry_fragment.adoc  artifact_links_fragment.adoc  build.phony.ag  common.adoc  config.adoc  config.adoc.in  config_source.adoc  documentation.adoc  flatten.gawk  source_code.adoc
docs/: README.adoc  index.html  kestrel-manual.tar.xz
docs/manual/: docinfo.html  index.html  sst-asciidoctor.css
install/: on-ubuntu
m4/: CALL_DEFUN_ONCE_MACROS.m4  DEFINE_AR.m4  DEFINE_AT.m4  DEFINE_CC.m4  DEFINE_CFLAGS.m4  DEFINE_CPPFLAGS.m4  DEFINE_CXX.m4  DEFINE_CXXFLAGS.m4  DEFINE_DEDUCE_WYNAS.m4  DEFINE_DOXYGEN.m4  DEFINE_EXEEXT.m4  DEFINE_EXE_CFLAGS.m4  DEFINE_EXE_CXXFLAGS.m4  DEFINE_EXE_LDFLAGS.m4  DEFINE_GIT.m4  DEFINE_HAVE_ANDROID.m4  DEFINE_LIBS.m4  DEFINE_LIB_CFLAGS.m4  DEFINE_LIB_CXXFLAGS.m4  DEFINE_LIB_LDFLAGS.m4  DEFINE_MAKEINFO.m4  DEFINE_RANLIB.m4  DEFINE_TEXI2DVIFLAGS.m4  DEFINE_WITH_CFLAG_WALL.m4  DEFINE_WITH_CFLAG_WEXTRA.m4  DEFINE_WITH_CXXFLAG_WALL.m4  DEFINE_WITH_CXXFLAG_WEXTRA.m4  DEFINE_WITH_KESTREL_RABBITMQ.m4  DEFINE_WITH_LIBDL.m4  DEFINE_WITH_LIBM.m4  DEFINE_WITH_LIBRT.m4  DEFINE_WITH_MOCK_SDK.m4  DEFINE_WITH_OPENSSL_CRYPTO.m4  DEFINE_WITH_OPENSSL_SSL.m4  DEFINE_WITH_PTHREADS.m4  DEFINE_WITH_RABBITMQ_C.m4  DEFINE_WITH_SQLITE.m4  DEFINE_WITH_SQLITE_SERIALIZATION.m4  DEFINE_WYNAS.m4  DEFINE_WYNA_KESTREL_RABBITMQ.m4  (+6 more)
src/artifactory/: android.dockerfile  android.dockerfile.loop  android.dockerfile.make1  android.dockerfile.make2  build.bash  build.phony.ag  config.dockerfile  config.dockerfile.loop  linux.dockerfile  linux.dockerfile.loop  linux.dockerfile.make1  linux.dockerfile.make2  manifest.json  manifest.kestrel-rabbitmq.json  push.bash
src/bash/: sst.bash
src/bash/include/: sst_abs_dir.bash  (+143 more)
src/core/: build.phony.ag  libcarma_client.cpp  libcarma_client_la.am  libcarma_client_la_SOURCES.am  libcarma_la.am  libcarma_server.cpp  libcarma_server_la.am  libcarma_server_la_SOURCES.am  libkestrel_rabbitmq.cpp  libkestrel_rabbitmq_la.am  libtemplate.inc
src/install/: on-x
src/misc/: config.h.in
src/mock/: libcarmamock_la.am  libcarmamock_la_SOURCES.am
src/rib/: rib.sh
src/rib-tools/: run-carma.bash.in  run-stub.bash.in
src/sdk/: libsdk_la.am  libsdk_la_SOURCES.am
src/web/: base.dockerfile  build.phony.ag  common.css  common.js  genesis.html  genesis.js  index.html  index.js  kestrel.cpp  loop.dockerfile  server.html  server.js
test/: EMUtest.h  client_mb_packet_t.cpp  client_mb_packet_t.gitignorable.am  clrmsg_t.cpp  clrmsg_t.gitignorable.am  npr_wprf.cpp  npr_wprf.gitignorable.am  psn_t.cpp  psn_t.gitignorable.am
test/kestrel/: deserialize.cpp  deserialize.gitignorable.am  normalize_path.cpp  normalize_path.gitignorable.am  serialize.cpp  serialize.gitignorable.am  simple_kv_reader.cpp  simple_kv_reader.gitignorable.am  simple_kv_writer.cpp  simple_kv_writer.gitignorable.am  slugify.cpp  slugify.gitignorable.am
(+775 files in other folders)
